# wenexus

./: .autofix.yaml  .eslintrc.yaml  .gitignore  .lintstagedrc.json  .markdownlint.yaml  .markdownlintignore  .pr-pipeline.yaml  .pre-commit-config.yaml  .prettierrc.js  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CODE_LOGIC_ANALYSIS.md  README.md  check_config.py  docker-compose.yml  package.json  progress.md  turbo.json
.autofix-backup/20250809_205738/: .pr-pipeline.yaml
.claude/: ecc-tools.json  hookify.check-docs-before-stop.local.md  identity.json
.claude/commands/: add-ecc-bundle-component.md  bmad-agent-bmad-master.md  cleanup.md  database-migration.md  e2e-test.md  feature-development-python-backend-agent.md  feature-development.md  generate-changelog.md  pr-comment-handle.md  pr-pipeline.md  pr-pipeline.sh  process-pr-review.md  refactoring.md  resume.md  save-progress.md  test-driven-development.md
.claude/skills/: .skills_store_lock.json
.codex/: AGENTS.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd.yml
.husky/: README.md  commit-msg  pre-commit
.windsurf/workflows/: e2e-test.md
_bmad/_config/: agent-manifest.csv  bmad-help.csv  files-manifest.csv  manifest.yaml  (+2 more)
backend/: README.md
docs/: README.md
frontend/: .eslintrc.yaml  .gitignore  .pre-commit-config.yaml  .prettierrc.js  README.md  check_db_config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
reports/: daily_20260311.md  daily_20260313.md
scripts/: daily-agent.sh  dev.sh
services/python-backend/: pyproject.toml
(+691 files in other folders)
